Update twitter scrapping with snscrape.ipynb

--- a/twitter scrapping using snscrape/twitter scrapping with snscrape.ipynb
+++ b/twitter scrapping using snscrape/twitter scrapping with snscrape.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Hashtags used:\n",
     "\n",
-    "1. #UkraineUnderAttaсk\n",
+    "1. "#UkraineUnderAttaсk"\n",
     "2. #UkraineRussiaWar\n",
     "3. #RussiaUkraineConflict\n",
     "4. #RussianUkrainianWar\n",
