Update twitter scrapping with snscrape.ipynb

--- a/twitter scrapping using snscrape/twitter scrapping with snscrape.ipynb
+++ b/twitter scrapping using snscrape/twitter scrapping with snscrape.ipynb
@@ -16,14 +16,14 @@
     "## Hashtags used:\n",
     "\n",
     "1. '#UkraineUnderAttaсk'\n",
-    "2. #UkraineRussiaWar\n",
-    "3. #RussiaUkraineConflict\n",
-    "4. #RussianUkrainianWar\n",
-    "5. #ukrainerussia\n",
-    "6. #WorldWar3\n",
-    "7. #RussiaVsUkraine\n",
-    "8. #StandWithRussia\n",
-    "9. #StandWithUkraine"
+    "2. '#UkraineRussiaWar'\n",
+    "3. '#RussiaUkraineConflict'\n",
+    "4. '#RussianUkrainianWar'\n",
+    "5. '#ukrainerussia'\n",
+    "6. '#WorldWar3'\n",
+    "7. '#RussiaVsUkraine'\n",
+    "8. '#StandWithRussia'\n",
+    "9. '#StandWithUkraine'"
    ]
   },
   {
